--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Uttam</title>
+  <title>{{ blog.title }}</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -26,43 +26,21 @@
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link" href="https://www.facebook.com/uttam.sharma.71216">Facebook</a>
           <a class="nav-item nav-link" href="{% static 'UttamSharma_Resume.docx'%}">Resume</a>
-          <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+          <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
     </nav>
   </header>
 
   <main role="main">
-
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">Hi, I'm Uttam.</h1>
-        <p class="lead text-muted">Hey, my name is Uttam and I love to make django websites.</p>
-        <p>
-          <a href="mailto:uttamsharma91@gmail.com" class="btn btn-primary my-2">Email Me</a>
-        </p>
-        <img src="{% static 'Uttam.jpg'%}"/>
-      </div>
-    </section>
-
-    <div class="album py-5 bg-light">
-      <div class="container">
-
-        <div class="row">
-          {% for job in jobs.all %}
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-              <img class="card-img-top" src="{{ job.image.url }}" />
-              <div class="card-body">
-                <p class="card-text">{{ job.summary }}</p>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
+    <div class="container">
+        <h1 class="text-center pt-3">{{ blog.title }}</h1>
+        <p class="text-center">{{ blog.pub_date }}</p>
+        <img class="img-fluid" src="{{ blog.image.url }}" />
+        <br/>
+        <br/>
+        <p>{{ blog.body }}</p>
     </div>
-
   </main>
 
   <footer class="text-muted">
